--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28,6 +28,15 @@
   letter-spacing: 0.075em;
   -webkit-transition: background 0.3s;
   transition: background 0.3s;
+  transition: transform 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out;
+  
+}
+.section-voltage-button button:hover {
+  /* styling saat mouse diarahkan ke button */
+  background-color: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+  transform: translateY(-5px);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .cards{
@@ -39,9 +48,16 @@
 }
 .card{
   background-color: #1c1b29;
-  border-radius: 20px;
   box-shadow: 0 0 30px rgba(0,0,0,0.18);
+ border-radius: 20px;
+ transition: all .3s;
 }
+
+ .card:hover {
+  box-shadow: 5px 5px 5px 5px rgba(0, 255, 117, 0.30);
+  transform: rotate(5deg);
+ }
+
 .section-containers{
   position: relative;
   clip-path: polygon(0 0,100% 0, 100% 90%, 0 110%);
