--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,11 +5,13 @@
   background-color: #0D1127;
 }
 
-.section-container h1{
+.section-title {
   color: #ffffff;
   font-family: 'Poppins', sans-serif;
   padding-left: 20px;
-  padding-top: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 2.5rem;
 }
 
 .section-voltage-button {
@@ -44,7 +46,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
   padding: 10px;
-  grid-gap: 15px;
+  grid-gap: 20px;
 }
 .card{
   background-color: #1c1b29;
@@ -186,5 +188,180 @@
     opacity: 0;
     -webkit-transform: translateY(3rem) scale(0.2);
             transform: translateY(3rem) scale(0.2);
+  }
+}
+
+/* kontak  */
+.section-contact {
+  background-color: #fff;
+  padding: 1rem 7% 1.4rem;
+}
+.section-contact h2 span {
+  color: #000;
+  font-family: 'Poppins', sans-serif;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 2.5rem;
+}
+.section-contact p {
+  color: #000;
+  font-size: 1.2rem;
+  text-align: center;
+  max-width: 30rem;
+  margin: auto;
+  font-weight: 100;
+  line-height: 1.6;
+}
+.contact-container {
+  width: 30%;
+  height: 60vh;
+	display: flex;
+	flex-direction: column;
+}
+.contact-info {
+	padding: 10px;
+	text-align: center;
+}
+.contact-info p {
+	margin: 0;
+	font-size: 14px;
+  font-weight: bold;
+	color: #777;
+}
+
+.contact-info {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.contact-info p {
+  font-size: 16px;
+  color: #666;
+}
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 10px;
+  /* align-items: center; */
+}
+
+.contact-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  padding: 0 10px;
+  border-radius: 5px;
+  margin-right: 10px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  margin-bottom: 10px;
+}
+
+.contact-box span {
+  margin-left: 10px;
+}
+
+.instagram {
+  background-color: #e1306c;
+}
+
+.whatsapp {
+  background-color: #25d366;
+}
+
+.twitter {
+  background-color: #1da1f2;
+}
+
+.contact-box:hover {
+  transform: translateY(-2px);
+}
+
+.fi {
+  display: inline-block;
+  font-size: 24px;
+  margin-right: 10px;
+  color: #fff;
+}
+
+
+
+.section-contact .row {
+  border-radius: 10px;
+  display: flex;
+  margin-top: 2rem;
+  background-color: #1c1b29;
+}
+
+.section-contact .row .map {
+  border-radius: 10px;
+  flex: 1 1 45rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 758px) {
+  html {
+    font-size: 62.5%;
+  }
+  .contact-info {
+
+    justify-content: center;
+    display: flex;
+    width: 320%;
+    padding: 10px;
+    text-align: center;
+  }
+  .contact-info p {
+    /* margin-right: ; */
+    font-size: 14px;
+    color: #777;
+  }
+    .contact-box {
+      width: 370%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      margin: 10px;
+      padding: 10px;
+      background-color: #00ebb0b0;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      border-radius: 10px;
+    }
+
+    .contact-icon p{
+      margin-right: 20px;
+    }
+
+    .instagram {
+      background-color: #e1306c;
+    }
+    
+    .whatsapp {
+      background-color: #25d366;
+    }
+    
+    .twitter {
+      background-color: #1da1f2;
+    }
+    .section-contact .row {
+      flex-wrap: wrap;
+    }
+  
+    .section-contact .row .map {
+      height: 50rem;
+    }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 55%;
   }
 }
