--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -46,14 +46,14 @@
   padding: 10px;
   grid-gap: 15px;
 }
-.card{
+.kartu{
   background-color: #1c1b29;
   box-shadow: 0 0 30px rgba(0,0,0,0.18);
  border-radius: 20px;
  transition: all .3s;
 }
 
- .card:hover {
+ .kartu:hover {
   box-shadow: 5px 5px 5px 5px rgba(0, 255, 117, 0.30);
   transform: rotate(5deg);
  }
