--- a/public/assets/css/now-ui-kit.css
+++ b/public/assets/css/now-ui-kit.css
@@ -6271,6 +6271,19 @@ img {
   background-color: #2c2c2c;
 }
 
+[data-background-color="blue"] {
+  background-color: #1ba2d1;
+}
+[data-background-color="kuning"] {
+  background-color: #fab917;
+}
+[data-background-color="merah"] {
+  background-color: #d61312;
+}
+[data-background-color="hijau"] {
+  background-color: #42763d;
+}
+
 [data-background-color]:not([data-background-color="gray"]) {
   color: #FFFFFF;
 }
