--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,13 +3,12 @@
 .event-container{
    max-width: 1200px;
    margin:0 auto;
-   padding:3rem 2rem;
+   padding:1rem 2rem;
 }
 
 .event-container .event-title{
-  font-weight: bold;
   font-family: 'Montserrat', sans-serif;
-   font-size: 25px;
+   font-size: 3.5rem;
    color:#444;
    margin-bottom: 3rem;
    text-align: center;
@@ -49,6 +48,7 @@
 .event-container .daftar-event .event h3{
    padding:.5rem 0;
    font-size: 1rem;
+   font-family: 'Montserrat', sans-serif;
    color:#444;
 }
 
@@ -104,6 +104,7 @@
 }
 
 .products-preview .preview h3{
+  font-family: 'Montserrat', sans-serif;
    color:#444;
    padding:.5rem 0;
    font-size: 1.25rem;
@@ -111,6 +112,7 @@
 
 
 .products-preview .preview p{
+  font-family: 'Montserrat', sans-serif;
    line-height: 1.5;
    padding:1rem 0;
    font-size: 1rem;
@@ -146,176 +148,127 @@
 }
 
 /* kontak  */
-.section-contact {
-  background-color: #42763d;
-  padding: 1rem 7% 1.4rem;
+.kontak-container{
+   max-width: 1200px;
+   margin:0 auto;
+   padding:1rem 2rem;
 }
-.section-contact h2 span {
-  color: #000;
+
+.kontak-container .kontak-title{
   font-family: 'Montserrat', sans-serif;
-  padding-left: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  font-size: 2.5rem;
-}
-.section-contact p {
-  color: #000;
-  font-size: 1.2rem;
-  text-align: center;
-  max-width: 30rem;
-  margin: auto;
-  font-weight: 100;
-  line-height: 1.6;
-}
-.contact-container {
-  width: 30%;
-  height: 60vh;
-	display: flex;
-	flex-direction: column;
-}
-.contact-info {
-	padding: 10px;
-	text-align: center;
-}
-.contact-info p {
-	margin: 0;
-	font-size: 14px;
-  font-weight: bold;
-	color: #777;
+   font-size: 3.5rem;
+   color:#444;
+   margin-bottom: 3rem;
+   text-align: center;
 }
 
-.contact-info {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.contact-info p {
-  font-size: 16px;
-  color: #666;
-}
-
-.contact-wrapper {
+.contact-info{
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  margin: 10px;
-  /* align-items: center; */
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 0 40px;
 }
 
-.contact-box {
-  display: flex;
+.kontak{
   justify-content: center;
   align-items: center;
-  height: 40px;
-  padding: 0 10px;
-  border-radius: 5px;
-  margin-right: 10px;
-  color: #fff;
-  font-size: 14px;
-  font-weight: 500;
-  text-decoration: none;
-  transition: all 0.3s ease;
-  margin-bottom: 10px;
+  display: contents;
+}
+.row{
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
-.contact-box span {
-  margin-left: 10px;
-}
-
-.instagram {
-  background-color: #e1306c;
-}
-
-.whatsapp {
-  background-color: #25d366;
-}
-
-.twitter {
-  background-color: #1da1f2;
-}
-
-.contact-box:hover {
-  transform: translateY(-2px);
-}
-
-.fi {
-  display: inline-block;
-  font-size: 24px;
-  margin-right: 10px;
-  color: #fff;
-}
-
-
-
-.section-contact .row {
+.row .map {
   border-radius: 10px;
-  display: flex;
-  margin-top: 2rem;
-  background-color: #1c1b29;
-}
-
-.section-contact .row .map {
-  border-radius: 10px;
-  flex: 1 1 45rem;
-  width: 100%;
+  margin-left: 48px;
+  margin-right: 48px;
+  margin-bottom: 48px;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 60vh;
   object-fit: cover;
 }
 
-@media (max-width: 758px) {
-  html {
-    font-size: 62.5%;
-  }
-  .contact-info {
-
-    justify-content: center;
-    display: flex;
-    width: 320%;
-    padding: 10px;
-    text-align: center;
-  }
-  .contact-info p {
-    /* margin-right: ; */
-    font-size: 14px;
-    color: #777;
-  }
-    .contact-box {
-      width: 370%;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      margin: 10px;
-      padding: 10px;
-      background-color: #00ebb0b0;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      border-radius: 10px;
-    }
-
-    .contact-icon p{
-      margin-right: 20px;
-    }
-
-    .instagram {
-      background-color: #e1306c;
-    }
-    
-    .whatsapp {
-      background-color: #25d366;
-    }
-    
-    .twitter {
-      background-color: #1da1f2;
-    }
-    .section-contact .row {
-      flex-wrap: wrap;
-    }
-  
-    .section-contact .row .map {
-      height: 50rem;
-    }
+.card-info{
+  border-radius: 10px;
+  background: #fff;
+  margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all .5s ease-in;
 }
 
-@media (max-width: 450px) {
-  html {
-    font-size: 55%;
+.contact-info a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  width: 150px;
+  height: 50px;
+  background-color: #131419;
+  border-radius: 5px;
+  font-size: 20px;
+  box-shadow: -5px -5px 10px #ffffff09, 5px 5px 10px #00000000 ;
+  transition: all .5s ease-in;
+}
+
+.contact-info a:hover{
+  box-shadow: inset -5px -5px 10px #ffffff09,inset 5px 5px 10px #00000000 ;
+}
+
+.icons{
+  margin-right: 15px;
+  transition: all .5s ease-in-out;
+}
+
+.contact-info a:hover .icons{
+  transform: rotate(360deg) scale(1.5);
+}
+
+span{
+  font-size: 14px;
+  letter-spacing: 2px;
+}
+
+
+.icon1 span:hover {
+  color: #0330fa;
+  text-shadow: 0px 0px 20px #0330fa70;
+}
+
+.icon2 span:hover {
+  color: #fa0361;
+  text-shadow: 0px 0px 20px #fa036170;
+}
+
+.icon3 span:hover {
+  color: #036efa;
+  text-shadow: 0px 0px 20px #036efa70;
+}
+
+.icon4 span:hover {
+  color: #075E54;
+  text-shadow: 0px 0px 20px #075E5470;
+}
+
+
+@media screen and (max-width:800px) {
+  .contact-info{
+    flex-direction: column;
+  }
+  .contact-info a{
+   width: 100%;
+  }
+  .card-info{
+    width: 150%;
+    max-width: 300px;
+    margin: 10px 0;
   }
 }
