--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -63,12 +63,13 @@
 
 .products-preview{
    position: fixed;
-   top:0; left:0;
+   top:0; left:0 ;bottom:0;
    min-height: 100vh;
    width: 100%;
    background: rgba(0,0,0,.8);
    display: none;
    align-items: center;
+   z-index: 9999;
    justify-content: center;
 }
 
@@ -80,6 +81,7 @@
    position: relative;
    margin:5rem;
    width: 30rem;
+   z-index: 10000;
 }
 
 .products-preview .preview.active{
