--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -245,9 +245,10 @@ section {
   gap: 1.5rem;
 }
 .event .box-container .box {
+  border-radius: 1rem;
   border: 0.2rem solid #ffffff;
   overflow: hidden;
-  background: #f6b418;
+  background: #ffffff;
 }
 .event .box-container:hover img {
   transform: scale(1.1);
@@ -270,17 +271,17 @@ section {
 }
 .event .box-container .content h3 {
   font-size: 2rem;
-  color: #ffffff;
+  color: #f6b418;
 }
 .event .box-container .content p {
   padding: 1rem 0;
   font-size: 1.4rem;
-  color: #ffffff;
+  color: #f6b418;
   line-height: 2;
 }
 .event .box-container .content a {
   font-size: 1.7rem;
-  color: #ffffff;
+  color: #f6b418;
 }
 .event .box-container .content a:hover i {
   padding-left: 1rem;
